--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,6 +1,7 @@
 $base-red: #A10115;
-$base-gray: #412E28;
 $base-orange: #D72C16;
+
 $black-accent: #000;
+$base-gray: #412e2869;
 $mid-gray: #C0B2B5;
 $lightest-gray: #F0EFEA;
