Add styling to form text and text input along with circles overlapping checkboxes

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -5,3 +5,9 @@ $black-accent: #000;
 $base-gray: #412e2869;
 $mid-gray: #C0B2B5;
 $lightest-gray: #F0EFEA;
+
+$heading-bottom-margin: 1rem;
+$heading-bottom-margin-big: 6rem;
+
+$letter-spacing-wide: .5rem;
+$letter-spacing-mild: .2rem;
