--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -5,7 +5,9 @@
 }
 
 body {
-  font-size: 1.6rem;
+  color: $black-accent;
   font-weight: 400;
   font-family: 'Raleway', sans-serif;
+  font-size: 3.6rem;
+  line-height: 1.7;
 }
