Add the checkmark functionality to the checkboxes and alternating colors

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,5 +1,5 @@
-$base-red: #A10115;
-$base-orange: #D72C16;
+$base-red: #de041f;
+$base-orange: rgb(231, 58, 35);
 
 $black-accent: #000;
 $base-gray: #412e2869;
