Style button and adjust ingredients and spacing for checkboxes adds instructions

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,7 +1,8 @@
 .header-primary {
   color: $base-red;
-  font-weight: 400;
+  font-weight: 600;
   font-size: 6.8rem;
+  // letter-spacing: $letter-spacing-wide;
 }
 
 body {
