Size to fit screen

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -7,6 +7,7 @@ $mid-gray: #C0B2B5;
 $lightest-gray: #F0EFEA;
 
 $heading-bottom-margin: 1rem;
+$heading-bottom-margin-med: 4rem;
 $heading-bottom-margin-big: 6rem;
 
 $letter-spacing-wide: .5rem;
