--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -1,7 +1,6 @@
 .search-form {
-  margin: 2% 5%;
-  font-size: 1.8rem;
-  width: 49%;
+  margin: 2% 2% 0 15%;
+  // width: 30%;
 
   &--specification {
     display: flex;
